feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -277,7 +277,9 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 
-*Domain* - Модель предметной области. Является самой стабильной, сущностной составляющей любого программного продукта. 
+*Domain* - Модель предметной области.
+
+Является самой стабильной, сущностной составляющей любого программного продукта. 
 
 В понятиях *Чистой Архитектуры* *Domain* означает то же самое, что *бизнес-логика*. Как правило, подразделяется на два
 слоя: внутренний - *Entities* и внешний - *Use Cases*.
@@ -295,14 +297,13 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 - *Entities* - иногда понимаются буквально, как сущности некоторой предметной области, иногда - как слой *бизнес-логики*,
 разделяемый несколькими программными продуктами - системами, приложениями, сервисами. 
 - *Use Cases* - логически замкнутые, **самодостаточные** сценарии использования функций (features) системы.
-Иногда совокупность *Use Case* понимается как слой *бизнес-логики*, относящийся к конкретному программному продукту - в
-противовес *Entities* - слою бизнес-логики, разделяемому множеством продуктов.
+Иногда - в контексте *Чистой Архитектуры* -  совокупность *Use Case* понимается как слой *бизнес-логики*, относящийся к
+конкретному программному продукту - в противовес *Entities* - слою бизнес-логики, разделяемому множеством продуктов.
 
 *Use Case* - одно из ключевых понятий архитектуры системы, в частности, с ним тесно связан *Принцип Единой
 Ответственности* (*SRP*), который, в свою очередь, является одним из ключевых принципов *SOLID* и, соответственно,
 *Чистой Архитектуры*.
 
-...
 </Notes>
 
 ---
