--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -316,26 +316,23 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
   - ***Gateways***
 
 <Notes>
-...
 
 - *Adapters* - в оригинальной диаграмме *Чистой Архитектуры* для адаптеров выделен отдельный слой под названием
 *Interface Adapters*.
 
 *Адаптер* - вспомогательный программный модуль, согласующий интерфейсы двух других модулей. В контексте
 *Чистой Архитектуры* адаптеры обычно служат для согласования интерфейсов внутреннего и внешнего архитектурных слоёв.
-При этом наиболее типовым случаем является согласование интерфейсов фреймворков и внешних сервисов с интерфейсами
-*бизнес-логики*.
+Типовым случаем является согласование интерфейсов фреймворков и внешних сервисов с интерфейсами *бизнес-логики*.
+
 В коде предлагаемого стартера используются *адаптеры* двух видов:  *презентеры*(*presenters*) и *шлюзы*(*gateways*).
-*Презентеры* и *шлюзы*
 
-- *Presenters* - по сути являются адаптерами UI-фреймворков для модулей бизнес-логики.
+- *Презентеры* - по сути являются адаптерами UI-фреймворков для модулей бизнес-логики.
 
-- *Gateways* - адаптеры внешних сервисов, используемых бизнес-логикой.
+- *Шлюзы* - адаптеры внешних сервисов, используемых бизнес-логикой.
 В сегодняшних системах доступ к внешним сервисам чаще всего обеспечивается через REST API. Наиболее распространённым
 видом таких сервисов является сервис доступа к базе данных. Иногда в таких случаях вместо *Gateway* используется термин
 *Repository*.
 
-...
 </Notes>
 
 ---
@@ -351,15 +348,13 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
   - ***UI***
 
 <Notes>
-...
 
-- *Infrastructure* - инфраструктура - всё, что находится во внешнем слое.
+- *Infrastructure* - инфраструктура - всё, что находится во внешнем слое - следующем за слоем *Interface Adapters*.
 
 К типичным представителям *Инфраструктуры* относятся базы данных (*DB*) и пользовательские интерфейсы (*UI*) со своими
 фреймворками.
 
 </Notes>
-
 
 ---
 
