feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -407,7 +407,7 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 
-Здесь изображена структура директорий (packages) клиенского приложения, вполне обычная при разработке на принципах
+Здесь изображена структура директорий (packages) клиентского приложения, вполне обычная при разработке на принципах
 Чистой Архитектуры.
 
 - domain
