docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -349,9 +349,9 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 
-- *Infrastructure* - инфраструктура - всё, что находится во внешнем слое - следующем за слоем *Interface Adapters*.
+- *Infrastructure* - инфраструктура - всё то, что находится во внешнем слое - следующем за слоем *Interface Adapters*.
 
-К типичным представителям *Инфраструктуры* относятся базы данных (*DB*) и пользовательские интерфейсы (*UI*) со своими
+Типичными обитателями *Инфраструктуры* являются базы данных (*DB*) и пользовательские интерфейсы (*UI*) со своими
 фреймворками.
 
 </Notes>
