docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -370,9 +370,8 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 Как уже говорилось, стартер реализован на *TypeScript*.
 При этом важно отметить, что большая часть решений будет применима и в других языках, особенно в языках, поддерживающих
-статическую типизацию, таких как *Java*, *Kotlin*, *C#*.   
+статическую типизацию, таких как *Java*, *Kotlin*, *C#* и т.п.   
 
-...
 </Notes>
 
 ---
