docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -423,7 +423,7 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 
-Это клиентская часть приложения, обведём её пунктиром.
+Это клиентская часть приложения, обозначим её явно.
 
 </Notes>
 
