docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -410,7 +410,8 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 <Notes>
 ...
 
-Например, можно сделать её плоской, упразднив корневые директории и разместив оставшиеся на одном уровне:  
+Например, можно сделать её плоской, упразднив корневые директории и разместив оставшиеся на одном уровне, как на этом
+слайде.  
 
 Другими словами, в данном случае до тех пор, пока структура не будет определяться какими-то привходящими требованиями,
 например, при использовании кодогенератора, ориентированного на жёсткую структуру, приветствуется творческий подход.
