docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -434,14 +434,22 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 
-Для полноты картины разместим на диаграмме и серверную часть, реализующую REST API для сохранения значения счётчика,
+Для полноты картины разместим на диаграмме и серверную часть, реализующую на REST API сервис хранения значения счётчика,
 например, на случай перезагрузки клиентского приложения.
+
+Отметим, что так же, как *UI*, сервис, реализующий REST API, относится к инфраструктуре.
 
 </Notes>
 
 ---
 
 <Image src={packagesDependencies} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
+Обозначим зависимости в целом - на уровне директорий в соответствии с *Правилом Зависимости* *Чистой Архитектуры*.
+
+</Notes>
 
 ---
 
