docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -457,7 +457,8 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 
-Это вариант, когда сервис является частью приложения, его backend-составляющей. 
+И в завершении диаграммы добавим линию, указывающую направление потока управления - от действия пользователя на вершине
+стека и до самого его дна, где происходит реакция сервиса на это действие на серверной стороне. 
 
 </Notes>
 
