docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -447,7 +447,9 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 
-Обозначим зависимости в целом - на уровне директорий в соответствии с *Правилом Зависимости* *Чистой Архитектуры*.
+Обозначим design-time-зависимости в целом - на уровне директорий.
+
+Они соответствуют *Правилу Зависимостей* *Чистой Архитектуры*.
 
 </Notes>
 
@@ -457,8 +459,8 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 
-И в завершении диаграммы добавим линию, указывающую направление потока управления - от действия пользователя на вершине
-стека и до самого его дна, где происходит реакция сервиса на это действие на серверной стороне. 
+И в завершении добавим линию потока управления (run-time-зависимостей) - от вершины до дна стека, от действий
+пользователя - до реакции сервиса на серверной стороне, которую не будем здесь детализировать.
 
 </Notes>
 
