docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -459,8 +459,8 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 
-И в завершении добавим линию потока управления (run-time-зависимостей) - от вершины до дна стека, от действий
-пользователя - до реакции сервиса на серверной стороне, которую не будем здесь детализировать.
+И в завершении добавим линию потока управления (run-time-зависимостей) - от вершины и до дна стека - от действий
+пользователя до реакции сервиса на серверной стороне, которую не будем здесь детализировать.
 
 </Notes>
 
