docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -468,14 +468,28 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 ---
 
-<Image src={umlOutInterface} style={{ width: '35vw', height: '80vh'}}/>
+<Image src={layerModule} style={{ width: '102vw', height: '100vh'}}/>
 
 <Notes>
 
-Вначале введём важное понятие *выходной интерфейс*.
+В последующем изложении будут использоваться понятия *provided-* и *consumed-*интерфейсов.
+*Provided-интерфейсы* - те, что реализуются, "поставляются" модулем, а *consumed* - те, что им используются,
+"потребляются".
 
-Почему не получается использовать уже известное понятие *требуемого* (*required*) интерфейса, введённого Мартином
-Фаулером ?
+На языке *UML* *Provided-* и *consumed-*интерфейсы обозначаются так называемой *socket-ball*-нотацией (иногда *ball* заменяют
+на *lollipop* - леденец).
+
+...
+</Notes>
+
+---
+
+<Image src={layerModule1} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
+*Порты*, обозначаемые квадратами, размещаются на границах *модуля* и являются единственным средством взаимодействия
+внутренней части модуля - его реализации - с внешним миром.
 
 </Notes>
 
@@ -499,21 +513,6 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 На рисунке показан самый простой - одномодульный вариант реализации.
 
-...
-</Notes>
-
----
-
-<Image src={layerModule1} style={{ width: '102vw', height: '100vh'}}/>
-
-<Notes>
-...
-
-Но архитектурный слой не обязательно должен быть реализован только одним модулем. Реализации могут быть и более
-сложными, например слой может быть реализован как цепочка модулей или даже ещё более сложно.
-
-Но на внешнем контуре - на стыках с соседними слоями обязательно должно соблюдаться *Правило Зависимостей*.  
- 
 ...
 </Notes>
 
