--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -41,6 +41,7 @@ import packagesDependenciesFlowControl from "./diagrams/packagesDependenciesFlow
 
 import layerModule from "./diagrams/layerModule.svg";
 import layerModule1 from "./diagrams/layerModule1.svg";
+import layerModule2 from "./diagrams/layerModule2.svg";
 
 import caLayerModulesBase from "./diagrams/caLayerModulesBase.svg";
 import caLayerModulesBaseRequired from "./diagrams/caLayerModulesBaseRequired.svg";
@@ -494,26 +495,13 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 </Notes>
 
 ---
-<Image src={layerModule} style={{ width: '102vw', height: '100vh'}}/>
+<Image src={layerModule2} style={{ width: '102vw', height: '100vh'}}/>
 
 <Notes>
 
-Рассмотрим простую организацию модуля архитектурного слоя. Наиболее показательно такой модуль выглядит для слоя
-адаптеров, поскольку этот слой точно имеет соседний внутренний слой - *Use Cases* - и соседний внешний слой -
-*Infrastructure*. 
+Рассмотрим простую организацию модуля архитектурного слоя. Например, такой модуль может находиться в слое адаптеров,
+поскольку этот слой точно имеет соседний внутренний слой - *Use Cases* - и соседний внешний слой - *Infrastructure*. 
 
-Модуль слоя в общем случае реализует некоторое множество интерфейсов, которые назовём здесь *входными* для модуля, и
-использует какое-то множество интерфейсов, которые назовём *выходными* для модуля.
-
-В то время как понятие *входных* интерфейсов почти для всех знакомо - это обычные интерфейсы, определяющие набор
-вызываемых методов в таких языках, как, например, *Java* и *TypeScript*, понятие *выходных* (используемых) интерфейсов
-пока не нашло места для своей формализации в языках программирования (по крайней мере в языках, с которыми знаком автор).
-
-Но в *UML2* 
-
-На рисунке показан самый простой - одномодульный вариант реализации.
-
-...
 </Notes>
 
 ---
@@ -522,6 +510,8 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 ...
+
+С учётом вышесказанного упрощённая диаграмма слоёв-модулей может выглядеть, как на этом слайде.
 
 Стоит отметить, что на первой части стека - от *UI* до *Domain* design-time-зависимости направлены к *входным*
 интерфейсам, а на второй половине - к *выходным* - именно в этом месте используется *Принцип Инверсии Зависимостей*.  
