docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -254,6 +254,8 @@ Frontend и
 
 Вставка отсюда: [Clean Architecture on Frontend presentation](https://github.com/softspiders/ca-on-frontend)
 
+Отдельная тема, она пока не готова, поэтому пока пропускаем.
+
 </Notes>
 
 ---
@@ -499,8 +501,10 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 
-Рассмотрим простую организацию модуля архитектурного слоя. Например, такой модуль может находиться в слое адаптеров,
-поскольку этот слой точно имеет соседний внутренний слой - *Use Cases* - и соседний внешний слой - *Infrastructure*. 
+Рассмотрим простую, быть может, несколько идеализированную организацию модуля архитектурного слоя.
+
+Такой модуль, например, может находиться в слое адаптеров, поскольку слой адаптеров точно имеет соседний внутренний слой -
+*Use Cases* - и соседний внешний слой - *Infrastructure*. 
 
 </Notes>
 
@@ -510,7 +514,7 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 
-С учётом вышесказанного упрощённая диаграмма слоёв-модулей может выглядеть, как на этом слайде.
+С учётом вышесказанного ещё более упрощённая диаграмма слоёв-модулей может выглядеть, как на этом слайде.
 
 Стоит отметить, что на первой части стека - от *UI* до *Domain* design-time-зависимости направлены к *входным*
 интерфейсам, а на второй половине - к *выходным* - именно в этом месте используется *Принцип Инверсии Зависимостей*.  
@@ -523,8 +527,9 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 <Notes>
 
-... 
+Детализация доменного слоя 
 
+...
 </Notes>
 
 ---
@@ -532,8 +537,11 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 <Image src={caLayerModulesBase2} style={{ width: '102vw', height: '100vh'}}/>
 
 <Notes>
+...
 
-... 
+Ещё большая детализация
+
+Таким же образом может быть детализирован каждый архитектурный слой, но это не входит в задачи данной презентации.
 
 </Notes>
 
