docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -108,7 +108,7 @@ import template from "./diagrams/template.svg";
 Это первая из серии презентаций о стартере для клиентских приложений, разрабатываемых на принципах *Чистой Архитектуры*.
 
 Несмотря на то, что предметная область и, соответственно, бизнес-логика стартера предельно минималистичны - это
-простейший счётчик с функциями инкремента и сброса, рассмотрение всех значимых аспектов трудно уместить в одной
+простейший счётчик с функциями инкремента и сброса, рассмотрение всех его значимых аспектов трудно уместить в одной
 презентации.  
 
 Поэтому здесь будет показано лишь самое существенное: как принципы *Чистой Архитектуры* могут быть представлены в коде,
