docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -359,7 +359,7 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 - *Infrastructure* - инфраструктура - всё то, что находится во внешнем слое - слое, который следует за *Interface
 Adapters*.
 
-Типичными обитателями *Инфраструктуры* являются базы данных (*DB*) и пользовательские интерфейсы (*UI*) со своими
+Типичными представителями *Инфраструктуры* являются базы данных (*DB*) и пользовательские интерфейсы (*UI*) со своими
 фреймворками.
 
 </Notes>
@@ -406,7 +406,7 @@ Adapters*.
 включающей директории-слои *Entities* и *Use Cases*.
 
 Это всего лишь один из возможных вариантов организации структуры. При наличии понимания назначения каждой директории,
-когда её имя говорит само за себя, структуру можно строить по-разному.
+когда имена директорий понимаются недвусмысленно, их структуру можно строить по-разному.
 
 </Notes>
 
@@ -444,7 +444,7 @@ Adapters*.
 Для полноты картины разместим на диаграмме и серверную часть, реализующую на REST API сервис хранения значения счётчика,
 например, на случай перезагрузки клиентского приложения.
 
-Отметим, что так же, как *UI*, сервис, реализующий REST API, относится к инфраструктуре.
+Отметим, что так же, как и *UI*, сервис, реализующий REST API, относится к инфраструктуре.
 
 </Notes>
 
@@ -454,9 +454,10 @@ Adapters*.
 
 <Notes>
 
-Обозначим design-time-зависимости в целом - на уровне директорий.
+Обозначим design-time-зависимости в целом - на уровне слоёв и директорий.
 
-Они соответствуют *Правилу Зависимостей* *Чистой Архитектуры*.
+Они соответствуют известному *Правилу Зависимостей* *Чистой Архитектуры*: design-time-зависимости направлены от
+периферии (инфраструктуры) к центру.
 
 </Notes>
 
