docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -43,6 +43,7 @@ import layerModule from "./diagrams/layerModule.svg";
 import layerModule1 from "./diagrams/layerModule1.svg";
 import layerModule2 from "./diagrams/layerModule2.svg";
 
+import caLayerModulesBase0 from "./diagrams/caLayerModulesBase0.svg";
 import caLayerModulesBase from "./diagrams/caLayerModulesBase.svg";
 import caLayerModulesBaseRequired from "./diagrams/caLayerModulesBaseRequired.svg";
 import caLayerModulesBase1 from "./diagrams/caLayerModulesBase1.svg";
@@ -467,7 +468,7 @@ Adapters*.
 
 <Notes>
 
-И в завершении добавим линию потока управления (run-time-зависимостей) - от вершины и до дна стека - от действий
+И завершающим штрихом добавим линию потока управления (run-time-зависимостей) - от вершины и до дна стека - от действий
 пользователя до реакции сервиса на серверной стороне, которую не будем здесь детализировать.
 
 </Notes>
@@ -479,8 +480,8 @@ Adapters*.
 <Notes>
 
 В последующем изложении будут использоваться понятия *provided-* и *consumed-*интерфейсов.
-*Provided-интерфейсы* - те, что реализуются, "поставляются" модулем, а *consumed* - те, что им используются,
-"потребляются".
+*Provided-интерфейсы* - те, что реализуются - как-бы поставляются модулем, а *consumed* - те, что им используются,
+как-бы потребляются.
 
 На языке *UML* *Provided-* и *consumed-*интерфейсы обозначаются так называемой *socket-ball*-нотацией (иногда *ball* заменяют
 на *lollipop* - леденец).
@@ -506,10 +507,21 @@ Adapters*.
 
 Рассмотрим простую, быть может, несколько идеализированную организацию модуля архитектурного слоя.
 
-Такой модуль, например, может находиться в слое адаптеров, поскольку слой адаптеров точно имеет соседний внутренний слой -
+Такой модуль может находиться, например, в слое адаптеров, поскольку слой адаптеров точно имеет соседний внутренний слой -
 *Use Cases* - и соседний внешний слой - *Infrastructure*. 
 
 </Notes>
+
+---
+
+<Image src={caLayerModulesBase0} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
+С учётом вышесказанного ещё более упрощённая диаграмма слоёв-модулей может выглядеть, как на этом слайде.
+
+</Notes>
+
 
 ---
 
@@ -517,10 +529,9 @@ Adapters*.
 
 <Notes>
 
-С учётом вышесказанного ещё более упрощённая диаграмма слоёв-модулей может выглядеть, как на этом слайде.
-
-Стоит отметить, что на первой части стека - от *UI* до *Domain* design-time-зависимости направлены к *входным*
-интерфейсам, а на второй половине - к *выходным* - именно в этом месте используется *Принцип Инверсии Зависимостей*.  
+На слайде видно, что на первой половине стека - от *UI* до *Domain* design-time-зависимости направлены от *consumed* - к
+*provided*-интерфейсам, а на второй половине наоборот: от *provided* - к *consumed* - именно так в данном случае
+проявляется *Принцип Инверсии Зависимостей*.  
  
 </Notes>
 
