docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -127,7 +127,8 @@ import template from "./diagrams/template.svg";
 На кого рассчитана презентация, какова её целевая аудитория ?
 
 От аудитории желательно присутствие хотя бы минимального предварительного понимания существа проблем, решаемых *Чистой
-Архитектурой*.
+Архитектурой* и очень желательно - знакомство с материалом, изложенным в презентации
+[*О Принципе Инверсии Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh).
 
 Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры* направлены на
 обеспечение долгого и устойчивого развития программного продукта, попросту - его живучести.  
@@ -541,9 +542,8 @@ Adapters*.
 
 <Notes>
 
-Детализация доменного слоя 
+Этот слайд показывает детализацию доменного слоя. 
 
-...
 </Notes>
 
 ---
@@ -551,14 +551,16 @@ Adapters*.
 <Image src={caLayerModulesBase2} style={{ width: '102vw', height: '100vh'}}/>
 
 <Notes>
-...
 
-Ещё большая детализация
+На слайде показана ещё большая детализация - с прорисовкой содержимого слоёв *usecases* и *entities*.
 
 Таким же образом может быть детализирован каждый архитектурный слой, но это не входит в задачи данной презентации.
 
 </Notes>
 
+---
+
+# Как это выглядит в коде ?
 
 ---
 
@@ -588,7 +590,12 @@ Adapters*.
 
 <Notes>
 
-В качестве примера приведём код бизнес-логики - из *usecases* - *CounterReset*
+В качестве примера приведём код *CounterReset* - модуля бизнес-логики - из слоя *usecases*.
+
+В начале модуля размещены определения *provided-* и *consumed*-интерфейсов модуля, названных, соответственно,
+*CounterResetIn* и *CounterResetOut*.
+
+Интерфейс *CounterResetOut* является *требуемым* (*required*) интерфейсом для адаптера из соседнего внешнего слоя.
 
 ... 
 </Notes>
