docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -127,8 +127,8 @@ import template from "./diagrams/template.svg";
 На кого рассчитана презентация, какова её целевая аудитория ?
 
 От аудитории желательно присутствие хотя бы минимального предварительного понимания существа проблем, решаемых *Чистой
-Архитектурой* и очень желательно - знакомство с материалом, изложенным в презентации
-[*О Принципе Инверсии Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh).
+Архитектурой* и очень желательно знакомство с материалом, изложенным в презентации [*О Принципе Инверсии
+Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh).
 
 Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры* направлены на
 обеспечение долгого и устойчивого развития программного продукта, попросту - его живучести.  
@@ -482,7 +482,9 @@ Adapters*.
 
 В последующем изложении будут использоваться понятия *provided-* и *consumed-*интерфейсов.
 *Provided-интерфейсы* - те, что реализуются - как-бы поставляются модулем, а *consumed* - те, что им используются,
-как-бы потребляются.
+как-бы потребляются. И, чтобы совсем запутать (на самом деле нет) аудиторию, дальше по тексту *provided*-интерфейсы
+иногда будем называть *входными* поскольку через них в модуль входит поток управления, а *consumed* - *выходными*,
+поскольку через них поток управления из модуля *выходит*.
 
 На языке *UML* *Provided-* и *consumed-*интерфейсы обозначаются так называемой *socket-ball*-нотацией (иногда *ball* заменяют
 на *lollipop* - леденец).
@@ -592,13 +594,21 @@ Adapters*.
 
 В качестве примера приведём код *CounterReset* - модуля бизнес-логики - из слоя *usecases*.
 
-В начале модуля размещены определения *provided-* и *consumed*-интерфейсов модуля, названных, соответственно,
+В начале модуля размещены определения *входного* и *выходного* интерфейсов модуля, названных, соответственно,
 *CounterResetIn* и *CounterResetOut*.
 
-Интерфейс *CounterResetOut* является *требуемым* (*required*) интерфейсом для адаптера из соседнего внешнего слоя.
+Стоит отметить, что интерфейс *CounterResetOut* является *требуемым* (*required*) интерфейсом для адаптера из соседнего
+внешнего слоя.
 
-... 
+...
+
+Далее - за объявлением интерфейсов размещается реализация входного интерфейса, по сути - реализация модуля.
+
 </Notes>
+
+---
+
+# Нужен слой адаптера
 
 ---
 
