docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -711,6 +711,12 @@ Adapters*.
 
 ---
 
+# Пожелания
+
+## Давайте вместе работать над нашими стартерами - эталонными приложениями и делать код всё более совершенным
+
+---
+
 # СПАСИБО ЗА ВНИМАНИЕ!
 
 ---
