docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -108,11 +108,13 @@ import template from "./diagrams/template.svg";
 
 Это первая из серии презентаций о стартере для клиентских приложений, разрабатываемых на принципах *Чистой Архитектуры*.
 
-Несмотря на то, что предметная область и, соответственно, бизнес-логика стартера предельно минималистичны - это
-счётчик с функциями инкремента и сброса, рассмотрение всех его значимых аспектов трудно уместить в одной презентации.  
-
-Поэтому здесь будет показано лишь самое существенное: как принципы *Чистой Архитектуры* могут быть представлены в коде,
-в данном случае - в коде *TypeScript*.
+Предметная область и, соответственно, бизнес-логика стартера предельно минималистичны - это обычный счётчик с функциями
+инкремента и сброса. Но при всей этой минималистичности стартер представлен fullstack-решением, в котором клиентская
+часть взаимодействует с persistence-сервисом (назовём это так) по REST API и имеет несколько аспектов, требующих
+отдельного рассмотрения.
+ 
+В этой презентации главное внимание будет уделено *Правилу зависимостей* *Чистой Архитектуры*, о том, как это правило
+может быть представлены в коде, в данном случае, в коде *TypeScript*.. 
 
 </Notes>
 
