docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -133,7 +133,9 @@ import template from "./diagrams/template.svg";
 Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh).
 
 Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры* направлены на
-обеспечение долгого и устойчивого развития программного продукта, попросту - его живучести.  
+обеспечение долгого и устойчивого развития программного продукта, попросту - его живучести.
+
+Притом, что пользовательский интерфейс стартера сделан на *React*, для восприятия этой презентации он не потребуется.   
 
 </Notes>
 
@@ -715,7 +717,7 @@ Adapters*.
 
 # Пожелания
 
-## Давайте вместе работать над нашими стартерами - эталонными приложениями и делать код всё более совершенным
+### Давайте вместе работать над нашими стартерами - эталонными приложениями для того, чтобы делать код всё более совершенным
 
 ---
 
