--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -73,7 +73,8 @@ import template from "./diagrams/template.svg";
 ---
 
 <p style="font-size: 80px; text-align:center;">
-Всем, кто смотрит из браузера нужно включить режим <i>Заметки докладчика</i>:
+Первое, что нужно сделать тому, кто собирается САМОСТОЯТЕЛЬНО смотреть презентацию из браузера, это включить режим
+<i>Заметки докладчика</i>:
 </p>
 <p style="font-size: 80px; padding-bottom:140px;">
     <ul>
@@ -114,7 +115,7 @@ import template from "./diagrams/template.svg";
 отдельного рассмотрения.
  
 В этой презентации главное внимание будет уделено *Правилу зависимостей* *Чистой Архитектуры*, о том, как это правило
-может быть представлены в коде, в данном случае, в коде *TypeScript*.. 
+может быть представлены в программном коде, в данном случае, в коде *TypeScript*.. 
 
 </Notes>
 
@@ -133,11 +134,22 @@ import template from "./diagrams/template.svg";
 Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh).
 
 Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры* направлены на
-обеспечение долгого и устойчивого развития программного продукта, попросту - его живучести.
+обеспечение долгого и устойчивого развития программного продукта, на увеличение его продолжительности жизни, попросту -
+живучести.
 
 Притом, что пользовательский интерфейс стартера сделан на *React*, для восприятия этой презентации он не потребуется.   
 
 </Notes>
+
+---
+
+# Mini FAQ
+
+## Производительность ?
+
+### Накладные расходы ?
+
+## Frontend ?
 
 ---
 
@@ -158,6 +170,10 @@ import template from "./diagrams/template.svg";
 <Notes>
 
 *Чистая Архитектура* - главное, для чего создавался стартер.
+
+Но из всего множества правил *Чистой Архитектуры* в этой презентации  Будет рассмотрено только *Правило Зависимостей*,
+базирующееся на *Принципе Инверсии Зависимостей*, поэтому всё, что будет здесь сказано, в полной мере можно будет
+отнести и к *Гексагональной Архитектуре*, и к *Луковой*.
 
 В общих чертах стартер отражает актуальный взгляд автора (не исключено, что он может измениться) на то, каким должно
 быть frontend-приложение, разрабатываемое на принципах *Чистой Архитектуры*.
