docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -389,18 +389,17 @@ Adapters*.
 ---
 
 <p style="font-size: 130px; text-align:center; padding-bottom:140px;">
-Как это всё
-<br/>
-выглядит в коде ?
+Лучше один раз увидеть
  </p>
 
 <Notes>
 
-Дальнейшее изложение посвящено разбору стартера, в котором принципы *Чистой Архитектуры* реализуются в программном коде.
+Дальнейшее изложение посвящено разбору стартера, а именно тому, как в нём обеспечивается соблюдение *Правила
+Зависимостей*.
 
-Как уже говорилось, стартер реализован на *TypeScript*.
-При этом важно отметить, что большая часть решений будет применима и в других языках, особенно в языках, поддерживающих
-статическую типизацию, таких как *Java*, *Kotlin*, *C#* и т.п.   
+Начнём с UML-диаграмм.
+
+Код тоже скоро будет, он становится всё ближе.
 
 </Notes>
 
@@ -410,7 +409,7 @@ Adapters*.
 
 <Notes>
 
-Начнём всё-таки с UML-диаграмм. Код совсем близко ;)
+
 
 Здесь изображена структура директорий клиентского приложения, вполне обычная при разработке на принципах *Чистой
 Архитектуры*.
@@ -552,9 +551,9 @@ Adapters*.
 
 <Notes>
 
-На слайде видно, что на первой половине стека - от *UI* до *Domain* design-time-зависимости направлены от *consumed* - к
-*provided*-интерфейсам, а на второй половине наоборот: от *provided* - к *consumed* - именно так в данном случае
-проявляется *Принцип Инверсии Зависимостей*.  
+На этом слайде видно, что на первой половине стека - от *UI* до *Domain* design-time-зависимости направлены от
+*выходных* интерфейсов к *входным*, а на второй половине наоборот: от *входных* - к *выходным* - именно так в данном
+случае проявляет себя *Принцип Инверсии Зависимостей*.  
  
 </Notes>
 
@@ -611,6 +610,10 @@ Adapters*.
 
 
 <Notes>
+
+Как уже говорилось, стартер реализован на *TypeScript*.
+При этом важно отметить, что большая часть решений будет применима и в других языках, особенно в языках, поддерживающих
+статическую типизацию, таких как *Java*, *Kotlin*, *C#* и т.п.   
 
 В качестве примера приведём код *CounterReset* - модуля бизнес-логики - из слоя *usecases*.
 
