docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -95,6 +95,13 @@ import template from "./diagrams/template.svg";
   - *Command & '-/+'* - на Mac
 - Для навигации используйте стрелки
 
+Сразу стоит сказать, что презентация развёрнута на надёжном хостинге, имеет высокую степень самодостаточности, поскольку
+сопровождается техническим текстом, поэтому для её восприятия наличие докладчика не требуется и записывать её на аудио/
+видео не обязательно.
+
+Хотя, конечно, задать вопрос "в прямом эфире", глядя докладчику прямо в глаза, и получить от него немедленный ответ в
+этом случае будет невозможно.
+
 </Notes>
 
 ---
