--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -95,12 +95,15 @@ import template from "./diagrams/template.svg";
   - *Command & '-/+'* - на Mac
 - Для навигации используйте стрелки
 
-Сразу стоит сказать, что презентация развёрнута на надёжном хостинге, имеет высокую степень самодостаточности, поскольку
-сопровождается техническим текстом, поэтому для её восприятия наличие докладчика не требуется и записывать её на аудио/
-видео не обязательно.
+Сразу стоит сказать, что презентация развёрнута на надёжном хостинге (в конце будет дана ссылка и на её исходник), имеет
+высокую степень самодостаточности, поскольку сопровождается техническим текстом, поэтому для её восприятия наличие
+докладчика не требуется и записывать её на аудио/видео не обязательно.
 
-Хотя, конечно, задать вопрос "в прямом эфире", глядя докладчику прямо в глаза, и получить от него немедленный ответ в
+Конечно, посмотреть докладчику прямо в глаза, и получить от него немедленный ответ на свой вопрос "в прямом эфире" в
 этом случае будет невозможно.
+
+Но зато заинтересованные слушатели впоследствии могут когда угодно и сколько угодно пересматривать эту презентацию в
+удобном для них темпе.
 
 </Notes>
 
