docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -102,8 +102,8 @@ import template from "./diagrams/template.svg";
 Конечно, посмотреть докладчику прямо в глаза, и получить от него немедленный ответ на свой вопрос "в прямом эфире" в
 этом случае будет невозможно.
 
-Но зато заинтересованные слушатели впоследствии могут когда угодно и сколько угодно пересматривать эту презентацию в
-удобном для них темпе.
+Но зато заинтересованные слушатели впоследствии могут когда и сколько угодно пересматривать эту презентацию в удобном
+для них темпе.
 
 </Notes>
 
