--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -54,6 +54,8 @@ import umlOutInterface from "./diagrams/umlOutInterface.png";
 import counterResetModule from "./diagrams/counterResetModule.svg";
 import counterResetModuleImplementation from "./diagrams/counterResetModuleImplementation.svg";
 
+import counterIncrementModuleImplementation from "./diagrams/CounterIncrementModuleImplementation.svg";
+
 import template from "./diagrams/template.svg";
 
 <Head>
@@ -592,6 +594,62 @@ Adapters*.
 ---
 
 # Как это выглядит в коде ?
+
+---
+
+<CodeSurferColumns themes={[naiveTheme, myTheme]}>
+
+<Step>
+
+<Image src={counterIncrementModuleImplementation} style={{ width: '100vw', height: '100vh'}}/>
+
+```ts 1 file=../../src/domain/usecases/CounterIncrement.ts title="CounterIncrement"
+```
+
+</Step>
+
+<Step>
+
+<Image src={counterIncrementModuleImplementation} style={{ width: '100vw', height: '100vh'}}/>
+
+```ts 2:11 file=../../src/domain/usecases/CounterIncrement.ts title="CounterIncrement"
+```
+
+</Step>
+
+
+<Step>
+
+<Image src={counterIncrementModuleImplementation} style={{ width: '100vw', height: '100vh'}}/>
+
+```ts 9:15 file=../../src/domain/usecases/CounterIncrement.ts title="CounterIncrement"
+```
+
+</Step>
+
+</CodeSurferColumns>
+
+
+<Notes>
+
+Как уже говорилось, стартер реализован на *TypeScript*.
+При этом важно отметить, что большая часть решений будет применима и в других языках, особенно в языках, поддерживающих
+статическую типизацию, таких как *Java*, *Kotlin*, *C#* и т.п.   
+
+В качестве примера приведём код *CounterReset* - модуля бизнес-логики - из слоя *usecases*.
+
+В начале модуля размещены определения *входного* и *выходного* интерфейсов модуля, названных, соответственно,
+*CounterResetIn* и *CounterResetOut*.
+
+Стоит отметить, что интерфейс *CounterResetOut* является *требуемым* (*required*) интерфейсом для адаптера из соседнего
+внешнего слоя.
+
+...
+
+Далее - за объявлением интерфейсов размещается реализация входного интерфейса, по сути - реализация модуля.
+
+</Notes>
+
 
 ---
 
